Full bosy overflow hidden , header sticky css error fixed

--- a/src/components/EmailList/EmailList.module.css
+++ b/src/components/EmailList/EmailList.module.css
@@ -22,3 +22,8 @@
     background-color: white;
     z-index: 999;
 }
+
+.emailList_list {
+    padding-bottom: 20%;
+
+}
